--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,5 +66,6 @@ dependencies {
     implementation "com.squareup.okhttp3:logging-interceptor:4.10.0"
 
     implementation "androidx.datastore:datastore-preferences:1.0.0"
+    implementation "androidx.navigation:navigation-compose:2.5.2"
 
 }
