--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,4 +68,7 @@ dependencies {
     implementation "androidx.datastore:datastore-preferences:1.0.0"
     implementation "androidx.navigation:navigation-compose:2.5.2"
 
+    implementation "com.google.dagger:hilt-android:2.42"
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
 }
